{
  "version": 4,
  "terraform_version": "0.13.2",
  "serial": 228,
  "lineage": "79fffa61-1cc5-acc8-52cd-e3a6c79f7ef0",
  "resources": [
    {
      "module": "module.elastic-beanstalk-environment",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:020046395185:security-group/sg-02e9f2abce8afa88b",
            "description": "Allow inbound traffic from provided Security Groups",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02e9f2abce8afa88b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "elastic-beanstalk-env",
            "name_prefix": "",
            "owner_id": "020046395185",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-036d6c70a42ad1dcc"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-00c4380c10c16bd7c",
            "public_dns": "ec2-3-12-185-166.us-east-2.compute.amazonaws.com",
            "public_ip": "3.12.185.166",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "vpc-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:020046395185:internet-gateway/igw-08b7596400301464b",
            "id": "igw-08b7596400301464b",
            "owner_id": "020046395185",
            "tags": {
              "Name": "daniyal-elastic-beanstalk-env-gw"
            },
            "vpc_id": "vpc-036d6c70a42ad1dcc"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00c4380c10c16bd7c",
            "id": "nat-00f3461b871d4bb1d",
            "network_interface_id": "eni-039826ccb9bc958b7",
            "private_ip": "11.0.1.165",
            "public_ip": "3.12.185.166",
            "subnet_id": "subnet-07a8fab792532c09e",
            "tags": {
              "Name": "daniyal-elastic-beanstalk-env-nat-gw"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.vpc-gw",
            "module.vpc.aws_subnet.public-subnets",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-01af0cfd519e27833",
            "owner_id": "020046395185",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-00f3461b871d4bb1d",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "daniyal-elastic-beanstalk-env-private-route-table"
            },
            "vpc_id": "vpc-036d6c70a42ad1dcc"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.vpc-gw",
            "module.vpc.aws_nat_gateway.nat-gw",
            "module.vpc.aws_subnet.public-subnets",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-00810169074edba41",
            "owner_id": "020046395185",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08b7596400301464b",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "daniyal-elastic-beanstalk-env-public-route-table"
            },
            "vpc_id": "vpc-036d6c70a42ad1dcc"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.vpc-gw",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cb4bc7ef740b596c",
            "route_table_id": "rtb-00810169074edba41",
            "subnet_id": "subnet-07a8fab792532c09e"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.vpc-gw",
            "module.vpc.aws_route_table.public-route-table",
            "module.vpc.aws_subnet.public-subnets",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aa71223929e5abaf",
            "route_table_id": "rtb-00810169074edba41",
            "subnet_id": "subnet-0a0a872469e149394"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.vpc-gw",
            "module.vpc.aws_route_table.public-route-table",
            "module.vpc.aws_subnet.public-subnets",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:020046395185:subnet/subnet-0b3778103e72ea0cf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "11.0.2.0/24",
            "id": "subnet-0b3778103e72ea0cf",
            "map_public_ip_on_launch": false,
            "owner_id": "020046395185",
            "tags": {
              "Name": "daniyal-elastic-beanstalk-env-private-subnet-0"
            },
            "vpc_id": "vpc-036d6c70a42ad1dcc"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:020046395185:subnet/subnet-0217bf574a032bd64",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "11.0.4.0/24",
            "id": "subnet-0217bf574a032bd64",
            "map_public_ip_on_launch": false,
            "owner_id": "020046395185",
            "tags": {
              "Name": "daniyal-elastic-beanstalk-env-private-subnet-1"
            },
            "vpc_id": "vpc-036d6c70a42ad1dcc"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:020046395185:subnet/subnet-07a8fab792532c09e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "11.0.1.0/24",
            "id": "subnet-07a8fab792532c09e",
            "map_public_ip_on_launch": true,
            "owner_id": "020046395185",
            "tags": {
              "Name": "daniyal-elastic-beanstalk-env-public-subnet-0"
            },
            "vpc_id": "vpc-036d6c70a42ad1dcc"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:020046395185:subnet/subnet-0a0a872469e149394",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "11.0.3.0/24",
            "id": "subnet-0a0a872469e149394",
            "map_public_ip_on_launch": true,
            "owner_id": "020046395185",
            "tags": {
              "Name": "daniyal-elastic-beanstalk-env-public-subnet-1"
            },
            "vpc_id": "vpc-036d6c70a42ad1dcc"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:020046395185:vpc/vpc-036d6c70a42ad1dcc",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "11.0.0.0/16",
            "default_network_acl_id": "acl-01164ece0bf86162d",
            "default_route_table_id": "rtb-0b7eca486a2737ca0",
            "default_security_group_id": "sg-0df8a9947dbb9f0d1",
            "dhcp_options_id": "dopt-1536fe7e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-036d6c70a42ad1dcc",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0b7eca486a2737ca0",
            "owner_id": "020046395185",
            "tags": {
              "Name": "daniyal-elastic-beanstalk-env"
            }
          }
        }
      ]
    }
  ]
}